Swapped around css in the main page(fixed the gap for you John ;) )

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,4 +1,10 @@
 .page {
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: center;
+}
+
+.body {
   display: flex;
   justify-content: center;
 }
@@ -10,4 +16,9 @@
 
 .About-Me {
   padding: 10px;
+  justify-content: right;
+}
+
+.About-Me div {
+ margin-block-end: 0em;
 }
